# tetris_wasm

./: .gitmodules  index.html  manifest.webmanifest  registerSW.js  sw.js
.github/workflows/: static.yml
assets/: index-0VfUHZVS.css  index-C8MDc3j0.js  index-CS8W1EWi.js  index-CofwrtTM.css  index-CuTPpUaa.js  index-Dg4afIHB.js  index-DoSeq40b.js  index-DwYq1DIc.css  index-MV_bML3R.js  index-aOrwdbI8.js  index-uiPO6f6Q.js
assets_server/: Cargo.toml  README.md
assets_server/src/: main.rs
cpp/: main.cpp  tetris.cpp
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: lazy_const.ts  random.ts  repeat.ts  tetris.d.ts  tetris.mjs  tetris.wasm  var.ts
frontend/src/components/: Modal.tsx  TouchController.tsx
frontend/src/types/: enums.ts  utilTypes.ts
frontend/src/views/: Game.tsx  StartScreen.tsx  main.tsx
tetris_wasm_cpp/: .clang-format  includes.hpp  main.cpp  rand.cpp  rand.hpp  tetris.hpp
tetris_wasm_react/: .gitattributes  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tetris_wasm_react/src/: App.tsx  Field.tsx  Game.tsx  index.css  keyDownHandler.ts  main.tsx  random.ts  repeat.ts  tetris.d.ts  tetris.mjs  tetris.wasm
tetris_wasm_react/src/components/: App.tsx  Button.tsx  Field.tsx  Game.tsx  GameView.tsx  Modal.tsx  TouchController.tsx
tetris_wasm_react/src/views/: App.tsx  Game.tsx  StartScreen.tsx  index.css  main.tsx
